--- a/FunnyGif/FunnyGif.App/FunnyGif.App/MainPage.xaml
+++ b/FunnyGif/FunnyGif.App/FunnyGif.App/MainPage.xaml
@@ -1,16 +1,16 @@
 ﻿<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:FunnyGif.MobileClient"
+             xmlns:local="clr-namespace:FunnyGif.App"
              x:Class="FunnyGif.App.MainPage" >
 
     <StackLayout>
         <!-- Place new controls here -->
         <Button Text="Connect" Clicked="Button_Clicked_1"></Button>
-        <Entry x:Name="Server" Text="http://172.16.28.47:5000"  ></Entry>
+        <Entry x:Name="txtServer" Text="http://172.16.28.47:5000"  ></Entry>
         <Label Text="Ingrese Texto para completar Auxilio me desmayo..... " 
            HorizontalOptions="Center"
            VerticalOptions="CenterAndExpand" />
-        <Entry x:Name="txtValue"  ></Entry>
+        <Entry x:Name="txtValue"></Entry>
         <Button Text="Send" Clicked="Button_Clicked"></Button>
     </StackLayout>
 
